<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.perfectdiamond.MainActivity"
    android:textColor="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/diamond"
        android:scaleType="centerCrop"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="@dimen/large_text"
        android:textStyle="italic"
        android:textAlignment="center"
        />

    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_call_24dp"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/standard_pad"
        android:paddingLeft="@dimen/standard_pad"
        />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/phone_icon"
        android:textSize="@dimen/standard_text"
        android:paddingBottom="@dimen/standard_pad"
        android:paddingRight="@dimen/standard_pad"
        />

    <ImageView
        android:id="@+id/address_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_place_24dp"
        android:layout_above="@id/phone_icon"
        android:paddingBottom="@dimen/standard_pad"
        android:paddingLeft="@dimen/standard_pad"
        />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="@dimen/standard_text"
        android:layout_above="@id/phone_icon"
        android:layout_toRightOf="@id/address_icon"
        android:paddingBottom="@dimen/standard_pad"
        android:paddingRight="@dimen/standard_pad"
        />

    <ImageView
        android:id="@+id/favorite_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_24dp"
        android:layout_above="@+id/address_icon"
        android:paddingBottom="@dimen/standard_pad"
        android:paddingLeft="@dimen/standard_pad"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/standard_text"
        android:layout_above="@+id/address_icon"
        android:layout_toRightOf="@id/favorite_icon"
        android:paddingBottom="@dimen/standard_pad"
        android:paddingRight="@dimen/standard_pad"
        />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:layout_above="@id/description"
        android:textSize="@dimen/large_text"
        android:textAlignment="center"
        android:paddingBottom="@dimen/standard_pad"
        />

</RelativeLayout>
